--- a/jsfEvidence/web/index.xhtml
+++ b/jsfEvidence/web/index.xhtml
@@ -25,7 +25,7 @@
                 <p:inputText value="#{studentController.student.name}"/><br/><br/>
 
                 <p:outputLabel value="Gender : "/>
-                <p:selectOneRadio id="gender" value="#{studentController.student.Gender}"><br/><br/>
+                <p:selectOneRadio id="gender" value="#{studentController.student.gender}"><br/><br/>
                     <f:selectItem itemLabel="Male" itemValue="Male"/>
                     <f:selectItem itemLabel="FeMale" itemValue="FeMale"/>
                 </p:selectOneRadio><br/><br/>
